add new changes

--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         <div class="price-card">
           <div class="price-card__subtitle">
             <h2 class="price-card__title">Basic</h2>
-            <h5 class="price-card__subtitle">Website</h5>
+            <h5 class="price-card__website-title">Website</h5>
           </div>
-          <h1 class="price-card__fee fee__green">99€</h1>
+          <div class="price-card__fee fee__green">99€</div>
           <p class="price-card__description">
             Simple website made in the world's most popular CMS system,
             Wordpress.
           </p>
-          <ul class="price-card__list">
-            <li class="price-card__list_item">
+          <ul class="price-card__options-list">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow arrow-green"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
@@ -42,7 +42,7 @@
 
               Website in WordPress
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
@@ -50,7 +50,7 @@
               />
               3 sub pages
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
@@ -58,7 +58,7 @@
               />
               Theme customized
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
@@ -66,7 +66,7 @@
               />
               Help and guidance
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
@@ -74,7 +74,7 @@
               />
               System introduction
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
@@ -92,15 +92,15 @@
           <div class="price-card__subtitle">
             <div class="price-card__popular">Popular</div>
             <h2 class="price-card__title">Business</h2>
-            <h3 class="price-card__subtitle">Website</h3>
+            <h3 class="price-card__website-title">Website</h3>
           </div>
-          <h1 class="price-card__fee fee__blue">299€</h1>
+          <div class="price-card__fee fee__blue">299€</div>
           <p class="price-card__description">
             Advanced website made in the world's most popular CMS system,
             Wordpress.
           </p>
-          <ul class="price-card__list">
-            <li class="price-card__list_item">
+          <ul class="price-card__options-list">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
@@ -108,7 +108,7 @@
               />
               Website in WordPress
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
@@ -116,7 +116,7 @@
               />
               3-5 sub pages
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
@@ -124,7 +124,7 @@
               />
               Theme customized
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
@@ -132,7 +132,7 @@
               />
               Help and guidance
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
@@ -140,7 +140,7 @@
               />
               System introduction
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
@@ -157,16 +157,15 @@
         <div class="price-card">
           <div class="price-card__subtitle">
             <h2 class="price-card__title">Webshop</h2>
-            <h3 class="price-card__subtitle">Website</h3>
+            <h3 class="price-card__website-title">Website</h3>
           </div>
-          <h1 class="price-card__fee fee__orange">599€</h1>
-
+          <div class="price-card__fee fee__orange">599€</div>
           <p class="price-card__description">
             Your very own webshop made the world's most popular CMS system,
             Wordpress.
           </p>
-          <ul class="price-card__list">
-            <li class="price-card__list_item">
+          <ul class="price-card__options-list">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
@@ -174,7 +173,7 @@
               />
               Webshop in WordPress
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
@@ -182,7 +181,7 @@
               />
               3-5 sub pages
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
@@ -190,7 +189,7 @@
               />
               Theme customized
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
@@ -198,7 +197,7 @@
               />
               Help and guidance
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
@@ -206,7 +205,7 @@
               />
               System introduction
             </li>
-            <li class="price-card__list_item">
+            <li class="price-card__options-list_item">
               <img
                 class="price-card__arrow"
                 src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
