--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 class="price-card__title">Basic</h2>
             <h5 class="price-card__website-title">Website</h5>
           </div>
-          <div class="price-card__fee fee__green">99€</div>
+          <div class="price-card__price fee__green">99€</div>
           <p class="price-card__description">
             Simple website made in the world's most popular CMS system,
             Wordpress.
@@ -94,7 +94,7 @@
             <h2 class="price-card__title">Business</h2>
             <h3 class="price-card__website-title">Website</h3>
           </div>
-          <div class="price-card__fee fee__blue">299€</div>
+          <div class="price-card__price fee__blue">299€</div>
           <p class="price-card__description">
             Advanced website made in the world's most popular CMS system,
             Wordpress.
@@ -157,9 +157,9 @@
         <div class="price-card">
           <div class="price-card__subtitle">
             <h2 class="price-card__title">Webshop</h2>
-            <h3 class="price-card__website-title">Website</h3>
+            <h3 class="price-card__website-tiprice">Website</h3>
           </div>
-          <div class="price-card__fee fee__orange">599€</div>
+          <div class="price-card__price fee__orange">599€</div>
           <p class="price-card__description">
             Your very own webshop made the world's most popular CMS system,
             Wordpress.
